# streaming-data-ingestion

./: .gitignore  README.md  docker-compose.yml  kafka-streamer.py  pyproject.toml  requirements.txt  spark-streaming.py
dags/: kafka-streamer.py
scripts/: entrypoint.sh
